# atwinc1500-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
.github/workflows/: ci.yml
diagrams/: sequence_diagrams.md
from-u8-derive/: Cargo.toml
from-u8-derive/src/: lib.rs
src/: crc.rs  error.rs  gpio.rs  hif.rs  lib.rs  macros.rs  registers.rs  socket.rs  spi.rs  spi_command.rs  traits.rs  types.rs  wifi.rs
tests/: connection_unit.rs  spi_unit.rs
