[package]
name = "atwinc1500"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
edition = "2021"
description = "A pure Rust, host driver for the Atwinc1500"
readme = "README.md"
repository = "https://github.com/drewtchrist/atwinc1500-rs"
license = "MIT OR Apache-2.0"
keywords = ["atwinc1500"]
categories = ["no-std", "embedded", "hardware-support"]
exclude = ["/diagrams", "/tests", "/.github", ".gitignore"]

[dependencies]
embedded-hal = { version = "0.2", features=["unproven"] }
embedded-nal = "0.6"
defmt = "0.3.0"

[dependencies.from-u8-derive]
path = "from-u8-derive"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
